drivers/misc: mediatek: power: Disable explicit werror
Very low quality driver, rather not fix

Signed-off-by: Vaisakh Murali <mvaisakh@statixos.com>

--- a/drivers/misc/mediatek/base/power/cm_mgr_v1/Makefile
+++ b/drivers/misc/mediatek/base/power/cm_mgr_v1/Makefile
@@ -11,6 +11,8 @@
 # GNU General Public License for more details.
 #
 
+subdir-ccflags-y += -Wno-error
+
 ifeq ($(CONFIG_MTK_GCOV_KERNEL),y)
 GCOV_PROFILE := y
 endif
