--- a/arch/arm64/configs/xiaomi_defconfig
+++ b/arch/arm64/configs/xiaomi_defconfig
@@ -418,3 +418,8 @@ CONFIG_MTK_SCHED_TRACERS=y
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
 CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_HW is not set
+
+# SLMK
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=256
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=100
